Updated POST methods
for register and login

--- a/ProjectFolder/views/register_page.hbs
+++ b/ProjectFolder/views/register_page.hbs
@@ -14,7 +14,7 @@
     <div class="register-main">
         <h1>CREATE AN ACCOUNT</h1>
         <a href="/login_page" class="register-loginlink">Already have an Account? Sign In</a>
-        <form class="register-form" action="/login_page" method="POST">
+        <form class="register-form" action="/register" method="POST">
             <label for="firstname">First Name</label>
             <input type="text" id="firstname" name="firstname" required>
             
