--- a/ProjectFolder/views/modify_reservation_page.hbs
+++ b/ProjectFolder/views/modify_reservation_page.hbs
@@ -13,16 +13,7 @@
 <body>
 
     <!-- Navigation Bar -->
-    <div class="profile-page-header">
-        <nav class="profile-page-navbar">
-            <a href="/">HOME</a>
-            <a href="/see_reservation_page">SEE RESERVATION</a>
-            <a href="/">RESERVE A SEAT</a>
-            <a href="/profile_page">PROFILE</a>
-            <a href="/remove_reservation">RESERVATION DASHBOARD</a>
-            <span class="profile-page-registerlogin"><a href="/login_page">REGISTER/LOGIN</a></span>
-        </nav>
-    </div>
+     {{> header headerClass="profile-page-header" navClass="profile-page-navbar"}}
 
     <div class="modify-reservation-content">
         <div class="left-space-transparent"></div>
