--- a/ProjectFolder/views/view_available_page.hbs
+++ b/ProjectFolder/views/view_available_page.hbs
@@ -46,17 +46,7 @@
 </head>
 <body class="available-page">
     <!-- Navigation Bar -->
-    <div class="viewavailable-page-header">
-        <nav class="profile-page-navbar">
-            <a href="/">HOME</a>
-            <a href="/see_reservation_page">SEE RESERVATION</a>
-            <a href="/">RESERVE A SEAT</a>
-            <a href="/profile_page">PROFILE</a>
-            <a href="/remove_reservation">RESERVATION DASHBOARD</a>
-            <span class="profile-page-registerlogin"><a href="/login_page">REGISTER/LOGIN</a></span>
-        </nav>
-        <h1>Stadium: Crypto.com Arena</h1>
-    </div>
+     {{> header headerClass="viewavailable-page-header" navClass="profile-page-navbar" title="Stadium"}}
 
     <div class="view-available-body">
         <div class="view-available-container">
