--- a/ProjectFolder/views/profile_current_reservation_page.hbs
+++ b/ProjectFolder/views/profile_current_reservation_page.hbs
@@ -1,18 +1,7 @@
 <body>
 
     <!-- Navigation Bar -->
-    <div class="profile-page-header ">
-        <nav class="profile-page-navbar">
-            <a href="/">HOME</a>
-            <a href="/see_reservation_page">SEE RESERVATION</a>
-            <a href="/">RESERVE A SEAT</a>
-            <a href="/profile_page">PROFILE</a>
-            <a href="/remove_reservation">RESERVATION DASHBOARD</a>
-            <span class="profile-page-registerlogin"><a href="/login_page">REGISTER/LOGIN</a></span>
-        </nav>
-
-        <h1>Information</h1>
-    </div>
+     {{> header headerClass="profile-page-header" navClass="profile-page-navbar" title="Information"}}
 
     <div class="profile-page-content">
         <div class="profile-left-page">
