--- a/ProjectFolder/public/styles.css
+++ b/ProjectFolder/public/styles.css
@@ -340,6 +340,7 @@ body {
 }
 
 .profile-picture-upload {
+    margin-top: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -401,17 +402,16 @@ body {
     padding: 0.5rem 0; 
 }
 
-.profile-input {
-    width: 100%; 
-    padding: 0.5rem; 
-    border: 1px solid black; 
-    background-color: #f0f0f0; 
-    font-size: 1rem; 
-    border-radius: 4px; 
-    outline: none; 
-    box-sizing: border-box; 
-    margin-bottom: 2rem;
+.profile-details h2 {
+    color: black;
+    font-size: 18px;
+    font-weight: 700;
+    font-family: 'Montserrat';
+    margin: 0 auto; 
+    padding: 0.5rem 0; 
+    text-align: center; 
 }
+
 
 .description-input {
     width: 100%; 
@@ -448,7 +448,11 @@ body {
     cursor: pointer;
     text-align: center; 
     text-decoration: none; 
-    color: #EE2121;
+    color: black;
+    border: none;
+    background: none;
+    padding: 0; 
+    font: inherit; 
 }
 
 .update-button-text {
